cabal-version:      2.4
name:               julip
version:            0.1.0.0
synopsis:           An implementation of the Category of Patches and Files in Haskell
description:
  An implementation of the Category of Patches and Files in Haskell
bug-reports:        https://github.com/emilypi/julip/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         emily@kadena.io
copyright:          (c) 2019 Emily Pillmore
category:           Development
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:        GHC == 8.6.5

source-repository head
  type:     git
  location: https://github.com/emilypi/julip.git

library
  exposed-modules:

  -- other-modules:
  -- other-extensions:
  build-depends:    base                  ^>=4.12.0.0


  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:

executable julip
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base                  ^>=4.12.0.0
    , julip
    , optparse-applicative

  hs-source-dirs:   exe
  default-language: Haskell2010

test-suite tasty
  main-is:          JulipTests.hs
  type:             exitcode-stdio-1.0
  build-depends:
    , base          ^>=4.12.0.0
    , tasty
    , tasty-hunit

  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
